fixed spacing issue

--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -379,3 +379,7 @@ label.error {
 	display: block;
 	color: red;
 }
+
+.disp-block {
+	display: block;
+}
